@@ -2,32 +2,26 @@ package blog.model;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+
+@RequiredArgsConstructor
 public class Group {
 	public enum Type {
 		Category,
 		Tag
 	}
 
-	private Type type;
-	private String name;
+	@Getter
+	private final Type type;
+	@Getter
+	private final String name;
 	private List<Article> articles = new ArrayList<Article>();
-
-	public Group(Type type, String name) {
-		this.type = type;
-		this.name = name;
-	}
-
-	public String getName() {
-		return name;
-	}
 
 	public String getUrl() {
 		return type.name().toLowerCase() + "/" + name.toLowerCase().replaceAll("[^a-z]", "-") + ".html";
-	}
-
-	public Type getType() {
-		return type;
 	}
 
 	public void add(Article article) {
@@ -39,6 +33,6 @@ public class Group {
 	}
 
 	public List<Article> getArticles() {
-		return articles.stream().sorted((a, b) -> -a.getDate().compareTo(b.getDate())).toList();
+        return articles.stream().sorted((a, b) -> -a.getDate().compareTo(b.getDate())).collect(Collectors.toList());
 	}
 }
